# dotai

./: .gitignore  README.md  pyproject.toml
.github/workflows/: ci.yml
src/dotai/: __init__.py  __main__.py  cli.py  config.py  detector.py
src/dotai/adapters/: __init__.py  aider.py  base.py  claude.py  cline.py  copilot.py  cursor.py  windsurf.py
tests/: conftest.py  test_adapters.py  test_cli.py  test_config.py  test_detector.py
